--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Numeri da 1 a 100</h1>
+    <h1>FizzBuzzDOM</h1>
 
     <div id="container"></div>
   
